# Bildverarbeitung-Tutorial

./: CMakeLists.txt  configs.h.in
Aufgabe1/: CMakeLists.txt  resources.qrc
Aufgabe1/src/: aufgabe1.cpp  gui.cpp  gui.h  imageprovider.cpp  imageprovider.h
Aufgabe1/ui/: RGBchannels.qml  RGBchannelsForm.ui.qml
Aufgabe2/: CMakeLists.txt
Aufgabe2/src/: aufgabe2.cpp  bvMat.cpp  bvMat.h
Aufgabe3/: CMakeLists.txt
Aufgabe3/src/: aufgabe3.cpp  bvMat.cpp  bvMat.h
Aufgabe4/: CMakeLists.txt
Aufgabe4/src/: aufgabe4.cpp  bvMat.cpp  bvMat.h
